# CalculatorCPP

./: .gitignore  CMakeLists.txt
include/: calculator.h
src/: CMakeLists.txt  calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
